--- a/native/htmd/Cargo.toml
+++ b/native/htmd/Cargo.toml
@@ -11,3 +11,8 @@ crate-type = ["cdylib"]
 [dependencies]
 rustler = "0.36.2"
 htmd = "0.3.0"
+
+[features]
+default = ["nif_version_2_16"]
+nif_version_2_16 = ["rustler/nif_version_2_16"]
+nif_version_2_17 = ["rustler/nif_version_2_17"]
