--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        elixir: ["1.18"]
-        otp: ["27"]
+        elixir: ["1.18", "1.19"]
+        otp: ["27", "28"]
 
     steps:
       - uses: actions/checkout@v4
